[package]
name = "lib_stripe"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stripe = { version = "0.14", features = ["runtime-tokio-hyper"] }
my_macros = { path = "../my_macros" }
tracing = { version = "0.1", features = ["log"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }